<resources>
    <string name="app_name">MVVM_Practice</string>
    <string name="start_button_text">START</string>
    <string name="restart_button_text">RESET</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="o_wins_counter_text">O wins: %d</string>
    <string name="x_wins_counter_text">X wins: %d</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="secret_text">You find a secret !</string>
    <string name="header_text">Collection of pet projects</string>
    <string name="game">Tic-Tac-Toe offline</string>
    <string name="storage">Storage task</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="text_preview">Some text for preview</string>
    <string name="about_storage_fragment">This is task 4 from rs.school.\nhttps://github.com/rolling-scopes-school/rs.android.task.4…</string>
    <string name="settings_header">There will be preference list</string>
    <string name="input_first_name_hint">First name</string>
    <string name="input_age_hint">Age</string>
    <string name="input_second_name_hint">Second name</string>
    <string name="input_nickname_hint">Nickname*</string>
    <string name="add_user_button_text">Add User</string>
    <string name="nickname_input_error">*Required</string>
    <string name="delete_user">delete user</string>
    <string name="filter">Filter</string>
    <string name="about">About</string>
    <string name="edit_user">edit user</string>
</resources>