<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.game.GameFragment">

            <TextView
                android:id="@+id/x_wins_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_wins_counter_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/game_field"
                app:layout_constraintEnd_toStartOf="@+id/o_wins_counter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/o_wins_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_wins_counter_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/game_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/x_wins_counter"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/game_field"
                layout="@layout/game_field" />

            <Button
                android:id="@+id/restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:text="@string/restart_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>